tests/suite/snapshots/suite__check__tests__check__bad_unbound_class_template_5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_unbound_class_template_5.ixi:3:16]
   │
 3 │ foo(): A::<A::<B::<int>[]>[]>
   ·                ┬  
   ·                ╰── Unbound class template B
───╯

