tests/suite/snapshots/suite__check__tests__check__bad_underscore.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_underscore.xi:4:3]
   │
 4 │   _ = foo()
   ·   ────┬────  
   ·       ╰────── Cannot initialize with a procedure
───╯

