tests/suite/snapshots/suite__check__tests__check__bad_underscore_tuple.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_underscore_tuple.xi:4:3]
   │
 4 │   _ = bar()
   ·   ────┬────  
   ·       ╰────── Initialization mismatch
───╯

