tests/suite/snapshots/suite__check__tests__check__bad_use_conflict.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_use_conflict.xi:3:1]
   │
 3 │ ╭─▶ foo(x:int) : int {
 4 │ ├─▶     return x
   · │                  
   · ╰────────────────── Implementation does not match signature
───╯

